Phase2/parser.output
Terminals unused in grammar

    KEYWORD_THEN
    DOUBLEDOT


State 153 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: parsing

    2 parsing: stmt parsing
    3        | stmt

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | KEYWORD_BREAK SEMICOLON
   10     | KEYWORD_CONTINUE SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 expr: expr '+' expr
   15     | expr '-' expr
   16     | expr '*' expr
   17     | expr '/' expr
   18     | expr '%' expr
   19     | expr GREATER expr
   20     | expr GREATER_EQUAL expr
   21     | expr LESS expr
   22     | expr LESS_EQUAL expr
   23     | expr EQUALS expr
   24     | expr NOT_EQUAL expr
   25     | expr KEYWORD_AND expr
   26     | expr KEYWORD_OR expr
   27     | assignexpr
   28     | term

   29 term: LEFTPARENTHESIS expr RIGHTPARENTHESIS
   30     | '-' expr
   31     | KEYWORD_NOT expr
   32     | INCREMENT lvalue
   33     | lvalue INCREMENT
   34     | DECREMENT lvalue
   35     | lvalue DECREMENT
   36     | primary

   37 assignexpr: lvalue '=' expr

   38 primary: lvalue
   39        | call
   40        | objectdef
   41        | LEFTPARENTHESIS funcdef RIGHTPARENTHESIS
   42        | const

   43 lvalue: IDENTIFIER
   44       | KEYWORD_LOCAL IDENTIFIER
   45       | DOUBLECOLON IDENTIFIER
   46       | member

   47 member: lvalue DOT IDENTIFIER
   48       | lvalue LEFTBRACKET expr RIGHTBRACKET
   49       | call DOT IDENTIFIER
   50       | call LEFTBRACKET expr RIGHTBRACKET

   51 call: call LEFTPARENTHESIS elist RIGHTPARENTHESIS
   52     | lvalue callsuffix
   53     | LEFTPARENTHESIS funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

   54 callsuffix: normcall
   55           | methodcall

   56 normcall: LEFTPARENTHESIS elist RIGHTPARENTHESIS

   57 methodcall: DOUBLECOLON IDENTIFIER LEFTPARENTHESIS elist RIGHTPARENTHESIS

   58 elist: exprlist
   59      | ε

   60 exprlist: exprlist COMMA expr
   61         | expr

   62 objectdef: LEFTBRACKET obj RIGHTBRACKET

   63 obj: elist
   64    | indexed

   65 indexed: indexedelem COMMA indexedelem
   66        | indexedelem

   67 indexedelem: LEFTBRACE expr COLON expr RIGHTBRACE

   68 block: LEFTBRACE blockk RIGHTBRACE

   69 blockk: blockk stmt
   70       | ε

   71 funcdef: KEYWORD_FUNCTION IDENTIFIER LEFTPARENTHESIS idlist RIGHTPARENTHESIS block
   72        | KEYWORD_FUNCTION LEFTPARENTHESIS idlist RIGHTPARENTHESIS block

   73 const: number
   74      | STRING
   75      | KEYWORD_NIL
   76      | KEYWORD_TRUE
   77      | KEYWORD_FALSE

   78 number: "integer constant"
   79       | "real contstant"

   80 idlist: idlist COMMA IDENTIFIER
   81       | IDENTIFIER
   82       | ε

   83 ifstmt: KEYWORD_IF LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt KEYWORD_ELSE stmt
   84       | KEYWORD_IF LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt

   85 whilestmt: KEYWORD_WHILE LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt

   86 forstmt: KEYWORD_FOR LEFTPARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHTPARENTHESIS stmt

   87 returnstmt: KEYWORD_RETURN expr SEMICOLON
   88           | KEYWORD_RETURN SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 18
    '*' (42) 16
    '+' (43) 14
    '-' (45) 15 30
    '/' (47) 17
    '=' (61) 37
    error (256)
    "integer constant" <intv> (258) 78
    "real contstant" <floatv> (259) 79
    KEYWORD_IF <stringv> (260) 83 84
    KEYWORD_THEN <stringv> (261)
    KEYWORD_ELSE <stringv> (262) 83
    KEYWORD_WHILE <stringv> (263) 85
    KEYWORD_FOR <stringv> (264) 86
    KEYWORD_FUNCTION <stringv> (265) 71 72
    KEYWORD_RETURN <stringv> (266) 87 88
    KEYWORD_BREAK <stringv> (267) 9
    KEYWORD_CONTINUE <stringv> (268) 10
    KEYWORD_AND <stringv> (269) 25
    KEYWORD_NOT <stringv> (270) 31
    KEYWORD_OR <stringv> (271) 26
    KEYWORD_LOCAL <stringv> (272) 44
    KEYWORD_TRUE <stringv> (273) 76
    KEYWORD_FALSE <stringv> (274) 77
    KEYWORD_NIL <stringv> (275) 75
    GREATER <stringv> (276) 19
    LESS <stringv> (277) 21
    EQUALS <stringv> (278) 23
    GREATER_EQUAL <stringv> (279) 20
    LESS_EQUAL <stringv> (280) 22
    NOT_EQUAL <stringv> (281) 24
    INCREMENT <stringv> (282) 32 33
    DECREMENT <stringv> (283) 34 35
    STRING <stringv> (284) 74
    IDENTIFIER <stringv> (285) 43 44 45 47 49 57 71 80 81
    LEFTBRACE <stringv> (286) 67 68
    RIGHTBRACE <stringv> (287) 67 68
    LEFTBRACKET <stringv> (288) 48 50 62
    RIGHTBRACKET <stringv> (289) 48 50 62
    LEFTPARENTHESIS <stringv> (290) 29 41 51 53 56 57 71 72 83 84 85 86
    RIGHTPARENTHESIS <stringv> (291) 29 41 51 53 56 57 71 72 83 84 85 86
    COMMA <stringv> (292) 60 65 80
    SEMICOLON <stringv> (293) 4 9 10 13 86 87 88
    COLON <stringv> (294) 67
    DOT <stringv> (295) 47 49
    DOUBLEDOT <stringv> (296)
    DOUBLECOLON <stringv> (297) 45 57
    UMINUS (298)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program (51)
        on left: 1
        on right: 0
    parsing (52)
        on left: 2 3
        on right: 1 2
    stmt (53)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 3 69 83 84 85 86
    expr (54)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 4 14 15 16 17 18 19 20 21 22 23 24 25 26 29 30 31 37 48 50 60 61 67 83 84 85 86 87
    term (55)
        on left: 29 30 31 32 33 34 35 36
        on right: 28
    assignexpr (56)
        on left: 37
        on right: 27
    primary (57)
        on left: 38 39 40 41 42
        on right: 36
    lvalue (58)
        on left: 43 44 45 46
        on right: 32 33 34 35 37 38 47 48 52
    member (59)
        on left: 47 48 49 50
        on right: 46
    call (60)
        on left: 51 52 53
        on right: 39 49 50 51
    callsuffix (61)
        on left: 54 55
        on right: 52
    normcall (62)
        on left: 56
        on right: 54
    methodcall (63)
        on left: 57
        on right: 55
    elist (64)
        on left: 58 59
        on right: 51 53 56 57 63 86
    exprlist (65)
        on left: 60 61
        on right: 58 60
    objectdef (66)
        on left: 62
        on right: 40
    obj (67)
        on left: 63 64
        on right: 62
    indexed (68)
        on left: 65 66
        on right: 64
    indexedelem (69)
        on left: 67
        on right: 65 66
    block (70)
        on left: 68
        on right: 11 71 72
    blockk (71)
        on left: 69 70
        on right: 68 69
    funcdef (72)
        on left: 71 72
        on right: 12 41 53
    const (73)
        on left: 73 74 75 76 77
        on right: 42
    number (74)
        on left: 78 79
        on right: 73
    idlist (75)
        on left: 80 81 82
        on right: 71 72 80
    ifstmt (76)
        on left: 83 84
        on right: 5
    whilestmt (77)
        on left: 85
        on right: 6
    forstmt (78)
        on left: 86
        on right: 7
    returnstmt (79)
        on left: 87 88
        on right: 8


State 0

    0 $accept: • program $end

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_IF          shift, and go to state 3
    KEYWORD_WHILE       shift, and go to state 4
    KEYWORD_FOR         shift, and go to state 5
    KEYWORD_FUNCTION    shift, and go to state 6
    KEYWORD_RETURN      shift, and go to state 7
    KEYWORD_BREAK       shift, and go to state 8
    KEYWORD_CONTINUE    shift, and go to state 9
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACE           shift, and go to state 19
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    SEMICOLON           shift, and go to state 22
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    program     go to state 25
    parsing     go to state 26
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    number      go to state 39
    ifstmt      go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


State 1

   78 number: "integer constant" •

    $default  reduce using rule 78 (number)


State 2

   79 number: "real contstant" •

    $default  reduce using rule 79 (number)


State 3

   83 ifstmt: KEYWORD_IF • LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt KEYWORD_ELSE stmt
   84       | KEYWORD_IF • LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt

    LEFTPARENTHESIS  shift, and go to state 44


State 4

   85 whilestmt: KEYWORD_WHILE • LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt

    LEFTPARENTHESIS  shift, and go to state 45


State 5

   86 forstmt: KEYWORD_FOR • LEFTPARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHTPARENTHESIS stmt

    LEFTPARENTHESIS  shift, and go to state 46


State 6

   71 funcdef: KEYWORD_FUNCTION • IDENTIFIER LEFTPARENTHESIS idlist RIGHTPARENTHESIS block
   72        | KEYWORD_FUNCTION • LEFTPARENTHESIS idlist RIGHTPARENTHESIS block

    IDENTIFIER       shift, and go to state 47
    LEFTPARENTHESIS  shift, and go to state 48


State 7

   87 returnstmt: KEYWORD_RETURN • expr SEMICOLON
   88           | KEYWORD_RETURN • SEMICOLON

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    SEMICOLON           shift, and go to state 49
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    expr        go to state 50
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38
    number      go to state 39


State 8

    9 stmt: KEYWORD_BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 51


State 9

   10 stmt: KEYWORD_CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 52


State 10

   31 term: KEYWORD_NOT • expr

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    expr        go to state 53
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38
    number      go to state 39


State 11

   44 lvalue: KEYWORD_LOCAL • IDENTIFIER

    IDENTIFIER  shift, and go to state 54


State 12

   76 const: KEYWORD_TRUE •

    $default  reduce using rule 76 (const)


State 13

   77 const: KEYWORD_FALSE •

    $default  reduce using rule 77 (const)


State 14

   75 const: KEYWORD_NIL •

    $default  reduce using rule 75 (const)


State 15

   32 term: INCREMENT • lvalue

    KEYWORD_LOCAL    shift, and go to state 11
    IDENTIFIER       shift, and go to state 18
    LEFTPARENTHESIS  shift, and go to state 55
    DOUBLECOLON      shift, and go to state 23

    lvalue  go to state 56
    member  go to state 33
    call    go to state 57


State 16

   34 term: DECREMENT • lvalue

    KEYWORD_LOCAL    shift, and go to state 11
    IDENTIFIER       shift, and go to state 18
    LEFTPARENTHESIS  shift, and go to state 55
    DOUBLECOLON      shift, and go to state 23

    lvalue  go to state 58
    member  go to state 33
    call    go to state 57


State 17

   74 const: STRING •

    $default  reduce using rule 74 (const)


State 18

   43 lvalue: IDENTIFIER •

    $default  reduce using rule 43 (lvalue)


State 19

   68 block: LEFTBRACE • blockk RIGHTBRACE

    $default  reduce using rule 70 (blockk)

    blockk  go to state 59


State 20

   62 objectdef: LEFTBRACKET • obj RIGHTBRACKET

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACE           shift, and go to state 60
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    $default  reduce using rule 59 (elist)

    expr         go to state 61
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 62
    exprlist     go to state 63
    objectdef    go to state 35
    obj          go to state 64
    indexed      go to state 65
    indexedelem  go to state 66
    const        go to state 38
    number       go to state 39


State 21

   29 term: LEFTPARENTHESIS • expr RIGHTPARENTHESIS
   41 primary: LEFTPARENTHESIS • funcdef RIGHTPARENTHESIS
   53 call: LEFTPARENTHESIS • funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_FUNCTION    shift, and go to state 6
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    expr        go to state 67
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 68
    const       go to state 38
    number      go to state 39


State 22

   13 stmt: SEMICOLON •

    $default  reduce using rule 13 (stmt)


State 23

   45 lvalue: DOUBLECOLON • IDENTIFIER

    IDENTIFIER  shift, and go to state 69


State 24

   30 term: '-' • expr

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    expr        go to state 70
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38
    number      go to state 39


State 25

    0 $accept: program • $end

    $end  shift, and go to state 71


State 26

    1 program: parsing •

    $default  reduce using rule 1 (program)


State 27

    2 parsing: stmt • parsing
    3        | stmt •

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_IF          shift, and go to state 3
    KEYWORD_WHILE       shift, and go to state 4
    KEYWORD_FOR         shift, and go to state 5
    KEYWORD_FUNCTION    shift, and go to state 6
    KEYWORD_RETURN      shift, and go to state 7
    KEYWORD_BREAK       shift, and go to state 8
    KEYWORD_CONTINUE    shift, and go to state 9
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACE           shift, and go to state 19
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    SEMICOLON           shift, and go to state 22
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    $default  reduce using rule 3 (parsing)

    parsing     go to state 72
    stmt        go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    number      go to state 39
    ifstmt      go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


State 28

    4 stmt: expr • SEMICOLON
   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   19     | expr • GREATER expr
   20     | expr • GREATER_EQUAL expr
   21     | expr • LESS expr
   22     | expr • LESS_EQUAL expr
   23     | expr • EQUALS expr
   24     | expr • NOT_EQUAL expr
   25     | expr • KEYWORD_AND expr
   26     | expr • KEYWORD_OR expr

    KEYWORD_AND    shift, and go to state 73
    KEYWORD_OR     shift, and go to state 74
    GREATER        shift, and go to state 75
    LESS           shift, and go to state 76
    EQUALS         shift, and go to state 77
    GREATER_EQUAL  shift, and go to state 78
    LESS_EQUAL     shift, and go to state 79
    NOT_EQUAL      shift, and go to state 80
    SEMICOLON      shift, and go to state 81
    '+'            shift, and go to state 82
    '-'            shift, and go to state 83
    '*'            shift, and go to state 84
    '/'            shift, and go to state 85
    '%'            shift, and go to state 86


State 29

   28 expr: term •

    $default  reduce using rule 28 (expr)


State 30

   27 expr: assignexpr •

    $default  reduce using rule 27 (expr)


State 31

   36 term: primary •

    $default  reduce using rule 36 (term)


State 32

   33 term: lvalue • INCREMENT
   35     | lvalue • DECREMENT
   37 assignexpr: lvalue • '=' expr
   38 primary: lvalue •
   47 member: lvalue • DOT IDENTIFIER
   48       | lvalue • LEFTBRACKET expr RIGHTBRACKET
   52 call: lvalue • callsuffix

    INCREMENT        shift, and go to state 87
    DECREMENT        shift, and go to state 88
    LEFTBRACKET      shift, and go to state 89
    LEFTPARENTHESIS  shift, and go to state 90
    DOT              shift, and go to state 91
    DOUBLECOLON      shift, and go to state 92
    '='              shift, and go to state 93

    $default  reduce using rule 38 (primary)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 33

   46 lvalue: member •

    $default  reduce using rule 46 (lvalue)


State 34

   39 primary: call •
   49 member: call • DOT IDENTIFIER
   50       | call • LEFTBRACKET expr RIGHTBRACKET
   51 call: call • LEFTPARENTHESIS elist RIGHTPARENTHESIS

    LEFTBRACKET      shift, and go to state 97
    LEFTPARENTHESIS  shift, and go to state 98
    DOT              shift, and go to state 99

    $default  reduce using rule 39 (primary)


State 35

   40 primary: objectdef •

    $default  reduce using rule 40 (primary)


State 36

   11 stmt: block •

    $default  reduce using rule 11 (stmt)


State 37

   12 stmt: funcdef •

    $default  reduce using rule 12 (stmt)


State 38

   42 primary: const •

    $default  reduce using rule 42 (primary)


State 39

   73 const: number •

    $default  reduce using rule 73 (const)


State 40

    5 stmt: ifstmt •

    $default  reduce using rule 5 (stmt)


State 41

    6 stmt: whilestmt •

    $default  reduce using rule 6 (stmt)


State 42

    7 stmt: forstmt •

    $default  reduce using rule 7 (stmt)


State 43

    8 stmt: returnstmt •

    $default  reduce using rule 8 (stmt)


State 44

   83 ifstmt: KEYWORD_IF LEFTPARENTHESIS • expr RIGHTPARENTHESIS stmt KEYWORD_ELSE stmt
   84       | KEYWORD_IF LEFTPARENTHESIS • expr RIGHTPARENTHESIS stmt

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    expr        go to state 100
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38
    number      go to state 39


State 45

   85 whilestmt: KEYWORD_WHILE LEFTPARENTHESIS • expr RIGHTPARENTHESIS stmt

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    expr        go to state 101
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38
    number      go to state 39


State 46

   86 forstmt: KEYWORD_FOR LEFTPARENTHESIS • elist SEMICOLON expr SEMICOLON elist RIGHTPARENTHESIS stmt

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    $default  reduce using rule 59 (elist)

    expr        go to state 61
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 102
    exprlist    go to state 63
    objectdef   go to state 35
    const       go to state 38
    number      go to state 39


State 47

   71 funcdef: KEYWORD_FUNCTION IDENTIFIER • LEFTPARENTHESIS idlist RIGHTPARENTHESIS block

    LEFTPARENTHESIS  shift, and go to state 103


State 48

   72 funcdef: KEYWORD_FUNCTION LEFTPARENTHESIS • idlist RIGHTPARENTHESIS block

    IDENTIFIER  shift, and go to state 104

    $default  reduce using rule 82 (idlist)

    idlist  go to state 105


State 49

   88 returnstmt: KEYWORD_RETURN SEMICOLON •

    $default  reduce using rule 88 (returnstmt)


State 50

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   19     | expr • GREATER expr
   20     | expr • GREATER_EQUAL expr
   21     | expr • LESS expr
   22     | expr • LESS_EQUAL expr
   23     | expr • EQUALS expr
   24     | expr • NOT_EQUAL expr
   25     | expr • KEYWORD_AND expr
   26     | expr • KEYWORD_OR expr
   87 returnstmt: KEYWORD_RETURN expr • SEMICOLON

    KEYWORD_AND    shift, and go to state 73
    KEYWORD_OR     shift, and go to state 74
    GREATER        shift, and go to state 75
    LESS           shift, and go to state 76
    EQUALS         shift, and go to state 77
    GREATER_EQUAL  shift, and go to state 78
    LESS_EQUAL     shift, and go to state 79
    NOT_EQUAL      shift, and go to state 80
    SEMICOLON      shift, and go to state 106
    '+'            shift, and go to state 82
    '-'            shift, and go to state 83
    '*'            shift, and go to state 84
    '/'            shift, and go to state 85
    '%'            shift, and go to state 86


State 51

    9 stmt: KEYWORD_BREAK SEMICOLON •

    $default  reduce using rule 9 (stmt)


State 52

   10 stmt: KEYWORD_CONTINUE SEMICOLON •

    $default  reduce using rule 10 (stmt)


State 53

   14 expr: expr • '+' expr
   15     | expr • '-' expr
   16     | expr • '*' expr
   17     | expr • '/' expr
   18     | expr • '%' expr
   19     | expr • GREATER expr
   20     | expr • GREATER_EQUAL expr
   21     | expr • LESS expr
   22     | expr • LESS_EQUAL expr
   23     | expr • EQUALS expr
   24     | expr • NOT_EQUAL expr
   25     | expr • KEYWORD_AND expr
   26     | expr • KEYWORD_OR expr
   31 term: KEYWORD_NOT expr •

    GREATER        shift, and go to state 75
    LESS           shift, and go to state 76
    EQUALS         shift, and go to state 77
    GREATER_EQUAL  shift, and go to state 78
    LESS_EQUAL     shift, and go to state 79
    NOT_EQUAL      shift, and go to state 80

    $default  reduce using rule 31 (term)


State 54

   44 lvalue: KEYWORD_LOCAL IDENTIFIER •

    $default  reduce using rule 44 (lvalue)


State 55

   53 call: LEFTPARENTHESIS • funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

    KEYWORD_FUNCTION  shift, and go to state 6

    funcdef  go to state 107


State 56

   32 term: INCREMENT lvalue •
   47 member: lvalue • DOT IDENTIFIER
   48       | lvalue • LEFTBRACKET expr RIGHTBRACKET
   52 call: lvalue • callsuffix

    LEFTBRACKET      shift, and go to state 89
    LEFTPARENTHESIS  shift, and go to state 90
    DOT              shift, and go to state 91
    DOUBLECOLON      shift, and go to state 92

    $default  reduce using rule 32 (term)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 57

   49 member: call • DOT IDENTIFIER
   50       | call • LEFTBRACKET expr RIGHTBRACKET
   51 call: call • LEFTPARENTHESIS elist RIGHTPARENTHESIS

    LEFTBRACKET      shift, and go to state 97
    LEFTPARENTHESIS  shift, and go to state 98
    DOT              shift, and go to state 99


State 58

   34 term: DECREMENT lvalue •
   47 member: lvalue • DOT IDENTIFIER
   48       | lvalue • LEFTBRACKET expr RIGHTBRACKET
   52 call: lvalue • callsuffix

    LEFTBRACKET      shift, and go to state 89
    LEFTPARENTHESIS  shift, and go to state 90
    DOT              shift, and go to state 91
    DOUBLECOLON      shift, and go to state 92

    $default  reduce using rule 34 (term)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 59

   68 block: LEFTBRACE blockk • RIGHTBRACE
   69 blockk: blockk • stmt

    "integer constant"  shift, and go to state 1
    "real contstant"    shift, and go to state 2
    KEYWORD_IF          shift, and go to state 3
    KEYWORD_WHILE       shift, and go to state 4
    KEYWORD_FOR         shift, and go to state 5
    KEYWORD_FUNCTION    shift, and go to state 6
    KEYWORD_RETURN      shift, and go to state 7
    KEYWORD_BREAK       shift, and go to state 8
    KEYWORD_CONTINUE    shift, and go to state 9
    KEYWORD_NOT         shift, and go to state 10
    KEYWORD_LOCAL       shift, and go to state 11
    KEYWORD_TRUE        shift, and go to state 12
    KEYWORD_FALSE       shift, and go to state 13
    KEYWORD_NIL         shift, and go to state 14
    INCREMENT           shift, and go to state 15
    DECREMENT           shift, and go to state 16
    STRING              shift, and go to state 17
    IDENTIFIER          shift, and go to state 18
    LEFTBRACE           shift, and go to state 19
    RIGHTBRACE          shift, and go to state 108
    LEFTBRACKET         shift, and go to state 20
    LEFTPARENTHESIS     shift, and go to state 21
    SEMICOLON           shift, and go to state 22
    DOUBLECOLON         shift, and go to state 23
    '-'                 shift, and go to state 24

    stmt        go to state 109
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    number      go to state 39
    ifstmt      go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


State 60

   67 indexedelem: LEFTBRACE • expr COLON expr RIGHTBRACE
